# kyam-launcher

./: .gitignore  CONTRIBUTING.md  README.md  config.json  package-lock.json  package.json
docs/: ARCHITECTURE.md
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/src/: main.rs
installer/ui/: index.html  script.js  style.css
src/: analytics.js  index.html  main.js  renderer.js  splash.html  style.css
src/locales/: de.json  en.json  es.json  fr.json  ja.json  pt.json  ru.json  zh.json
src/renderer/: dialog.js  i18n.js  news.js  utils.js
src/services/: config.js  discord.js  game.js  javaManager.js  mods.js  news.js  patcher.js  serverPatcher.js  updater.js  utils.js
src/utils/: logger.js
